# SimpleVector

./: CMakeLists.txt  README.md  array_ptr.h  main.cpp  simple_vector.h  tests.h
